syntax = "proto3";

package api.note_v1;

option go_package = "github.com/almira-galeeva/testGrpc/pkg/note_v1";

service NoteV1 {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc GetListNote(GetListNoteRequest) returns (GetListNoteResponse);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNodeResponse);
}

message CreateNoteRequest {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteResponse {
  int64 id = 1;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponse {
  string title = 1;
  string text = 2;
  string author = 3;
}

message GetListNoteRequest {
  repeated int64 ids = 1;
}

message GetListNoteResponse {
  message Result {
    string title = 1;
    string text = 2;
    string author = 3;
  }
  repeated Result results = 1;
}

message UpdateNoteRequest {
  int64 id = 1;
  string title = 2;
  string text = 3;
  string author = 4;
}

message UpdateNoteResponse {
  int64 id = 1;
  int64 res = 2;
}

message DeleteNoteRequest {
  int64 id = 1;
}

message DeleteNodeResponse {
  int64 id = 1;
  int64 res = 2;
}